# goit-pythonweb-hw-01

./: pyproject.toml
src/: factory_pattern.py  solid.py
