[tool.poetry]
name = "goit-pythonweb-hw-01-1"
version = "0.1.0"
description = "Homework-1"
authors = ["Iryna <iris.shostenko@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
